--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
     "mongoose": "^8.8.1",
-    "nanoid": "^3.3.7"
+    "nanoid": "^3.3.7",
+    "uuid": "^11.0.3"
   }
 }
